--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "netlify deploy --prod"
+    "build": "netlify deploy --prod",
+    "start": "node index.mjs"
   },
   "keywords": [],
   "author": "",
@@ -12,9 +13,6 @@
   "dependencies": {
     "clipboardy": "^3.0.0",
     "express": "^4.18.2",
-    "netlify-cli": "^15.4.1",
-    "netlify-lambda": "^2.0.16",
-    "nodemon": "^2.0.22",
-    "serverless-http": "^3.2.0"
+    "nodemon": "^2.0.22"
   }
 }
