--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.mjs -n"
+    "start": "node index.js -n"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "clipboardy": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "node-clipboardy": "^1.0.3",
     "nodemon": "^2.0.22"
   }
 }
