--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
     "clipboardy": "^3.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
