--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "autocopynodejsapi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.mjs"
   },
   "keywords": [],
   "author": "",
